# phenom_simulator

./: .gitignore  CMakeLists.txt  README.md  package.xml
scripts/: plot_logs.py
src/ad_pde/: ad_1d.cc
src/lorenz/: lorenz.cc
src/utils/: euler.h
