<?xml version="1.0"?>
<package>
  <name>phenom_simulator</name>
  <version>1.0.0</version>
  <description>The phenom_simulator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="vpreston@mit.edu">vpreston</maintainer>

  <license>Copyright 2020 Massachusetts Institute of Technology</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <run_depend>catkin</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
